<resources>
    <string name="app_name">Zenjob</string>

    <string name="lbl_login_heading">LOGIN</string>
    <string name="lbl_login_email">Email</string>
    <string name="lbl_login_password">Password</string>
    <string name="lbl_login_submit">LOGIN</string>

    <string name="lbl_home_toolbar_title">Jobs Entdecken</string>
    <string name="lbl_offer_earning_per_day">%s pro Stunde</string>
    <string name="lbl_offer_item_date_title">DATUM</string>
    <string name="lbl_offer_item_time_title">ZEIT</string>
    <string name="lbl_offer_item_details_button">ZEIG MIR DETAILS</string>
    <string name="lbl_offer_item_decline_button">NICHT INTERESSIERT</string>
    <string name="lbl_offer_empty_item_title">Du hast keine neuen Tasks fur diesen Job</string>

    <string name="lbl_offer_decline_title">Why dont you want this job?</string>
    <string name="lbl_offer_decline_back_button">GO BACK</string>
    <string name="lbl_offer_decline_send_button">SEND</string>
    <string name="lbl_offer_decline_step2_title">Please enter your reason</string>
    <string name="lbl_offer_decline_send_button_step2">SEND</string>

    <string name="err_msg_empty">Please provide text to this field</string>
    <string name="err_msg_email">Please provide valid email</string>
    <string name="err_msg_password">Please provide valid password</string>
    <string name="err_retry">Retry</string>
    <string name="err_data_default">Error: Executing else block with no results</string>
    <string name="err_offer_decline_choice_empty">Please select at-least one choice</string>

    <string name="title_error_dialog">ERROR</string>

    <string name="param_error_message">paramErrorMessage</string>
    <string name="param_offer_details_id">paramOfferDetailsId</string>
    <string name="param_offer_decline_id">paramOfferDeclineId</string>
    <string name="param_offer_decline_response">paramOfferDeclineResponse</string>
</resources>
