<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <import type="com.zenjob.utils.validation.ValidationRule" />

        <variable
            name="viewModel"
            type="com.zenjob.ui.home.offerdecline.OfferDeclineViewModel" />

        <variable
            name="errorClickListener"
            type="com.zenjob.ui.common.listeners.ErrorItemClickListener" />

        <variable
            name="checkChangeListener"
            type="android.widget.RadioGroup.OnCheckedChangeListener" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="watcher"
            type="android.text.TextWatcher" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:background="@android:color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/include_network_layout"
            layout="@layout/item_network_state"
            android:visibility="@{(viewModel.networkViewModel.showProgress || viewModel.networkViewModel.showError) ? View.VISIBLE : View.GONE}"
            app:errorClickListener="@{errorClickListener}"
            app:viewModel="@{viewModel.networkViewModel}" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{(viewModel.networkViewModel.showProgress || viewModel.networkViewModel.showError) ? View.GONE : View.VISIBLE}">

            <LinearLayout
                android:id="@+id/ll_offer_decline_reasons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:singleLine="true"
                    android:text="@string/lbl_offer_decline_title"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/rg_offer_decline_reasons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:onCheckedChanged="@{checkChangeListener}"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_offer_decline_go_back"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginRight="@dimen/margin_16"
                        android:layout_marginBottom="@dimen/margin_16"
                        android:background="@android:color/transparent"
                        android:onClick="@{(view) -> clickListener.onClick(view)}"
                        android:text="@string/lbl_offer_decline_back_button"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/btn_offer_decline_send"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginRight="@dimen/margin_16"
                        android:layout_marginBottom="@dimen/margin_16"
                        android:background="@android:color/transparent"
                        android:onClick="@{(view) -> clickListener.onClick(view)}"
                        android:text="@string/lbl_offer_decline_send_button"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_offer_decline_step2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_22"
                android:paddingTop="@dimen/margin_22"
                android:paddingRight="@dimen/margin_22"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_22"
                    android:singleLine="true"
                    android:text="@string/lbl_offer_decline_step2_title"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:watcher="@{watcher}"
                    app:error="@{@string/err_msg_empty}"
                    app:rule="@{ValidationRule.EMPTY}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_offer_decline_reason_step2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:lines="3"
                        android:text="@={viewModel.reasonStep2}"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_offer_decline_send_step2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/margin_30"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:background="@android:color/transparent"
                    android:enabled="@{!TextUtils.isEmpty(viewModel.reasonStep2)}"
                    android:gravity="right"
                    android:onClick="@{(view) -> clickListener.onClick(view)}"
                    android:text="@string/lbl_offer_decline_send_button_step2"
                    android:textColor="@drawable/selector_offer_decline_send"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </FrameLayout>

    </FrameLayout>


</layout>